--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				<button class="spawn-abc-btn" type="button" data-id="775">长剑</button>
 			</div>
 			<label for="item-id-input">Code</label>
-			<input id="item-id-input" type="text" placeholder="e.g. 31=7.62" autocomplete="off" inputmode="numeric"
+			<input id="item-id-input" type="text" placeholder="452|核子可乐31|7.62" autocomplete="off" inputmode="numeric"
 				oninput="this.value = this.value.replace(/[^0-9]/g, '')" />
 			<div class="actions">
 				<button id="item-id-cancel" type="button">Cancel</button>
