feat: Add new item spawn buttons and update the item ID input placeholder.

--- a/index.html
+++ b/index.html
@@ -185,10 +185,14 @@
 				<button class="spawn-abc-btn" type="button" data-id="370">缝纫包</button>
 				<button class="spawn-abc-btn" type="button" data-id="1015">环氧树</button>
 				<button class="spawn-abc-btn" type="button" data-id="775">长剑</button>
+				<button class="spawn-abc-btn" type="button" data-id="443">汽油</button>
+				<button class="spawn-abc-btn" type="button" data-id="447">汽车维</button>
+				<button class="spawn-abc-btn" type="button" data-id="376">牛皮胶</button>
+				<button class="spawn-abc-btn" type="button" data-id="108">帐篷</button>
 			</div>
 			<label for="item-id-input">Code</label>
-			<input id="item-id-input" type="text" placeholder="452|核子可乐31|7.62" autocomplete="off" inputmode="numeric"
-				oninput="this.value = this.value.replace(/[^0-9]/g, '')" />
+			<input id="item-id-input" type="text" placeholder="131|SV98;31|7.62;376|牛皮" autocomplete="off"
+				inputmode="numeric" oninput="this.value = this.value.replace(/[^0-9]/g, '')" />
 			<div class="actions">
 				<button id="item-id-cancel" type="button">Cancel</button>
 				<button id="item-id-ok" type="button">OK</button>
@@ -200,8 +204,12 @@
 				<button class="spawn-abc-btn" type="button" data-id="944">GP-25</button>
 				<button class="spawn-abc-btn" type="button" data-id="129">Grz</button>
 				<button class="spawn-abc-btn" type="button" data-id="130">VSS</button>
-				<button class="spawn-abc-btn" type="button" data-id="137">9x18</button>
+				<button class="spawn-abc-btn" type="button" data-id="138">9x39</button>
 				<button class="spawn-abc-btn" type="button" data-id="120">巨盔</button>
+				<button class="spawn-abc-btn" type="button" data-id="131">SV-98</button>
+				<button class="spawn-abc-btn" type="button" data-id="31">7.62</button>
+				<button class="spawn-abc-btn" type="button" data-id="452">核子可</button>
+				<button class="spawn-abc-btn" type="button" data-id="36">血袋</button>
 			</div>
 		</div>
 	</div>
